--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,127 @@
 }
 
 html {
-  font-size: 63.5%;
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+body {
+  font: 1.4rem "Century Gothic", Futura, sans-serif;
+}
+
+ol,
+ul {
+  padding-left: 3rem;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(1rem + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.board-row::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.game_container {
+  background-color: #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
+  width: 100%;
+  height: 100vh;
+  padding-top: 5%;
+}
+
+.game-board {
+  background-color: rgb(200, 197, 197);
+  border-radius: 2rem;
+  padding: 4rem;
+}
+
+.square {
+  background: #ffffffde;
+  border: 0.3rem solid #999;
+  float: left;
+  font-size: 7.2rem;
+  font-weight: bold;
+  line-height: 10.2rem;
+  height: 10.2rem;
+  margin-right: -0.3rem;
+  margin-top: -0.3rem;
+  padding: 0;
+  text-align: center;
+  width: 10.2rem;
+}
+
+.status {
+  margin-bottom: 1rem;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game-info {
+  margin-left: 2rem;
+}
+
+.reset-button {
+  width: 100%;
+  padding: 1rem 2rem;
+}
+
+.game-board-title {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+@media (max-width: 380px) {
+  .game-board {
+    background-color: rgb(200, 197, 197);
+    border-radius: 1rem;
+    padding: 1rem;
+  }
+
+  .square {
+    background: #fff;
+    border: 0.2rem solid #999;
+    float: left;
+    font-size: 4.8rem;
+    font-weight: bold;
+    line-height: 6.8rem;
+    height: 6.8rem;
+    margin-right: -0.2rem;
+    margin-top: -0.2rem;
+    padding: 0;
+    text-align: center;
+    width: 6.8rem;
+  }
 }
